11.Balancing_Sticky_Session/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oncall-ingress-sticky
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-name: "oncall-auth"
    nginx.ingress.kubernetes.io/session-cookie-expires: "60"
spec:
  rules:
    - host: oncall.local
      http:
        paths:
          - path: "/(.*)"
            pathType: Prefix
            backend:
              service:
                name: oncall
                port:
                  number: 8080
    - host: oncall.metrics.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oncall
                port:
                  number: 9091
